Check when AI is updated

--- a/config_example.json
+++ b/config_example.json
@@ -4,5 +4,6 @@
     "tag_general_path": "",
     "tag_character_path": "",
     "work_path": "",
-    "threshold": 0.3
+    "threshold": 0.3,
+    "AIversion": "20220819"
 }
