--- a/config_example.json
+++ b/config_example.json
@@ -8,5 +8,6 @@
     "threshold": 0.3,
     "AIVersion": "20220819",
     "imgcdn": false,
-    "imgcdn_url": "example.com"
+    "imgcdn_url": "example.com",
+    "port": 8080
 }
